--- a/Css/font.css
+++ b/Css/font.css
@@ -59,3 +59,283 @@
   font-family: 'Helvetica';
   src: url(../fonts/HelveticaExtendedBQ-Bold.otf);
 }
+
+@font-face {font-family: "fa";
+  src: url('/Fonts/font_ai60cl3merf9lik9.eot?t=1479795236779'); /* IE9*/
+  src: url('/Fonts/font_ai60cl3merf9lik9.eot?t=1479795236779#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('/Fonts/font_ai60cl3merf9lik9.woff?t=1479795236779') format('woff'), /* chrome, firefox */
+  url('/Fonts/font_ai60cl3merf9lik9.ttf?t=1479795236779') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+  url('/Fonts/font_ai60cl3merf9lik9.svg?t=1479795236779#fa') format('svg'); /* iOS 4.1- */
+}
+
+.fa {
+  font-family:"fa" !important;
+  font-size:16px;
+  font-style:normal;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-stroke-width: 0.2px;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.fa-all:before { content: "\e696"; }
+
+.fa-back:before { content: "\e697"; }
+
+.fa-cart:before { content: "\e698"; }
+
+.fa-category:before { content: "\e699"; }
+
+.fa-close:before { content: "\e69a"; }
+
+.fa-comments:before { content: "\e69b"; }
+
+.fa-cry:before { content: "\e69c"; }
+
+.fa-delete:before { content: "\e69d"; }
+
+.fa-edit:before { content: "\e69e"; }
+
+.fa-email:before { content: "\e69f"; }
+
+.fa-favorite:before { content: "\e6a0"; }
+
+.fa-folder:before { content: "\e6a1"; }
+
+.fa-form:before { content: "\e6a2"; }
+
+.fa-help:before { content: "\e6a3"; }
+
+.fa-information:before { content: "\e6a4"; }
+
+.fa-less:before { content: "\e6a5"; }
+
+.fa-moreunfold:before { content: "\e6a6"; }
+
+.fa-more:before { content: "\e6a7"; }
+
+.fa-pic:before { content: "\e6a8"; }
+
+.fa-qrcode:before { content: "\e6a9"; }
+
+.fa-refresh:before { content: "\e6aa"; }
+
+.fa-rfq:before { content: "\e6ab"; }
+
+.fa-search:before { content: "\e6ac"; }
+
+.fa-selected:before { content: "\e6ad"; }
+
+.fa-set:before { content: "\e6ae"; }
+
+.fa-smile:before { content: "\e6af"; }
+
+.fa-success:before { content: "\e6b1"; }
+
+.fa-survey:before { content: "\e6b2"; }
+
+.fa-training:before { content: "\e6b3"; }
+
+.fa-viewgallery:before { content: "\e6b4"; }
+
+.fa-viewlist:before { content: "\e6b5"; }
+
+.fa-warning:before { content: "\e6b6"; }
+
+.fa-wrong:before { content: "\e6b7"; }
+
+.fa-account:before { content: "\e6b8"; }
+
+.fa-add:before { content: "\e6b9"; }
+
+.fa-atm:before { content: "\e6ba"; }
+
+.fa-clock:before { content: "\e6bb"; }
+
+.fa-remind:before { content: "\e6bc"; }
+
+.fa-calendar:before { content: "\e6bf"; }
+
+.fa-attachment:before { content: "\e6c0"; }
+
+.fa-3column:before { content: "\e6c3"; }
+
+.fa-4column:before { content: "\e6c4"; }
+
+.fa-discount:before { content: "\e6c5"; }
+
+.fa-service:before { content: "\e6c7"; }
+
+.fa-print:before { content: "\e6c9"; }
+
+.fa-box:before { content: "\e6cb"; }
+
+.fa-process:before { content: "\e6ce"; }
+
+.fa-bags:before { content: "\e6d1"; }
+
+.fa-beauty:before { content: "\e6d2"; }
+
+.fa-electrical:before { content: "\e6d4"; }
+
+.fa-home:before { content: "\e6d7"; }
+
+.fa-electronics:before { content: "\e6da"; }
+
+.fa-gifts:before { content: "\e6db"; }
+
+.fa-apparel:before { content: "\e6dc"; }
+
+.fa-lights:before { content: "\e6de"; }
+
+.fa-sports:before { content: "\e6e0"; }
+
+.fa-toys:before { content: "\e6e1"; }
+
+.fa-auto:before { content: "\e6e3"; }
+
+.fa-jewelry:before { content: "\e6e4"; }
+
+.fa-trade-assurance:before { content: "\e6e5"; }
+
+.fa-browse:before { content: "\e6e6"; }
+
+.fa-rfqqm:before { content: "\e6e7"; }
+
+.fa-rfqquantity:before { content: "\e6e8"; }
+
+.fa-atmaway:before { content: "\e6e9"; }
+
+.fa-rfq1:before { content: "\e6eb"; }
+
+.fa-scanning:before { content: "\e6ec"; }
+
+.fa-compare:before { content: "\e6ee"; }
+
+.fa-filter:before { content: "\e6f1"; }
+
+.fa-pin:before { content: "\e6f2"; }
+
+.fa-history:before { content: "\e6f3"; }
+
+.fa-productfeatures:before { content: "\e6f4"; }
+
+.fa-supplierfeatures:before { content: "\e6f5"; }
+
+.fa-similarproduct:before { content: "\e6f6"; }
+
+.fa-link:before { content: "\e6f7"; }
+
+.fa-cut:before { content: "\e6f8"; }
+
+.fa-table:before { content: "\e6f9"; }
+
+.fa-navlist:before { content: "\e6fa"; }
+
+.fa-imagetext:before { content: "\e6fb"; }
+
+.fa-text:before { content: "\e6fc"; }
+
+.fa-move:before { content: "\e6fd"; }
+
+.fa-subtract:before { content: "\e6fe"; }
+
+.fa-dollar:before { content: "\e702"; }
+
+.fa-raw:before { content: "\e704"; }
+
+.fa-office:before { content: "\e705"; }
+
+.fa-agriculture:before { content: "\e707"; }
+
+.fa-machinery:before { content: "\e709"; }
+
+.fa-assessedbadge:before { content: "\e70a"; }
+
+.fa-gerenzhongxin:before { content: "\e70b"; }
+
+.fa-jifen:before { content: "\e70c"; }
+
+.fa-renwuguanli:before { content: "\e70d"; }
+
+.fa-operation:before { content: "\e70e"; }
+
+.fa-remind1:before { content: "\e713"; }
+
+.fa-icondownload:before { content: "\e714"; }
+
+.fa-map:before { content: "\e715"; }
+
+.fa-bad:before { content: "\e716"; }
+
+.fa-good:before { content: "\e717"; }
+
+.fa-skip:before { content: "\e718"; }
+
+.fa-iconfontplay2:before { content: "\e719"; }
+
+.fa-iconfontstop:before { content: "\e71a"; }
+
+.fa-compass:before { content: "\e71b"; }
+
+.fa-security:before { content: "\e71c"; }
+
+.fa-share:before { content: "\e71d"; }
+
+.fa-store:before { content: "\e722"; }
+
+.fa-manageorder:before { content: "\e723"; }
+
+.fa-rejectedorder:before { content: "\e724"; }
+
+.fa-phone:before { content: "\e725"; }
+
+.fa-bussinessman:before { content: "\e726"; }
+
+.fa-shoes:before { content: "\e728"; }
+
+.fa-mobilephone:before { content: "\e72a"; }
+
+.fa-emailfilling:before { content: "\e72d"; }
+
+.fa-favoritesfilling:before { content: "\e730"; }
+
+.fa-accountfilling:before { content: "\e732"; }
+
+.fa-creditlevel:before { content: "\e735"; }
+
+.fa-creditlevelfilling:before { content: "\e736"; }
+
+.fa-card012:before { content: "\e737"; }
+
+.fa-exl:before { content: "\e73f"; }
+
+.fa-pdf:before { content: "\e740"; }
+
+.fa-zip:before { content: "\e741"; }
+
+.fa-sorting:before { content: "\e743"; }
+
+.fa-copy:before { content: "\e744"; }
+
+.fa-save:before { content: "\e747"; }
+
+.fa-inquirytemplate:before { content: "\e749"; }
+
+.fa-templatedefault:before { content: "\e74a"; }
+
+.fa-libra:before { content: "\e74c"; }
+
+.fa-survey1:before { content: "\e74e"; }
+
+.fa-ship:before { content: "\e74f"; }
+
+.fa-bussinesscard:before { content: "\e753"; }
+
+.fa-hot:before { content: "\e756"; }
+
+.fa-data:before { content: "\e757"; }
+
+.fa-trade:before { content: "\e758"; }
+
+.fa-onepage48:before { content: "\e75a"; }
+
