续费计费计算，创建客户计费，容量计费，消费处理，消费日志，消费日志展示

--- a/Css/control.css
+++ b/Css/control.css
@@ -15,6 +15,7 @@
 .none{display: none;}
 .transition1{-webkit-transition: all .5s .1s;-moz-transition: all .5s .1s;-o-transition: all .5s .1s;-ms-transition: all .5s .1s;}
 .strickout{text-decoration: line-through;color: #9E;}
+.mainBox{max-height: 90%;overflow: auto;}
 
 /*End*/
 .mainTop{width: 100%;height: 48px;position: fixed;top: 0;left: 0;z-index: 200;}
